# tuipaz

./: .gitmodules  Cargo.toml  README.md
app/: Cargo.toml
app/src/: main.rs
app/src/db/: db_mac.rs  init_db.rs  mod.rs
app/src/tui/: app.rs  buttons.rs  config.rs  editor.rs  errors.rs  events.rs  inputs.rs  mod.rs  note_list.rs  searchbar.rs  ui.rs  user_messages.rs  utils.rs
src/: main.rs
src/db/: db_mac.rs  init_db.rs  mod.rs
src/tui/: app.rs  buttons.rs  editor.rs  errors.rs  events.rs  inputs.rs  mod.rs  ui.rs  user_messages.rs  utils.rs
