[package]
name = "tuipaz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.27.0"
dotenv = "0.15.0"
ratatui = "0.26.2"
serde = { version = "1.0.200", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tui-textarea = { version = "0.4.0", features = ["search"] }
