[package]
name = "tuipaz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
config = "0.14.0"
crossterm = "0.27.0"
dotenv = "0.15.0"
log = "0.4.21"
log4rs = "1.3.0"
ratatui = { version = "0.26.2", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.14"
tuipaz-textarea = { path = "./libs/tuipaz-textarea" }
